add some styles and js

--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
   "dependencies": {
     "normalize-scss": "^7.0.1",
     "sass": "^1.26.8"
+  },
+  "devDependencies": {
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12"
   }
 }
